Theme changes and adjustments to mobile version
